fixing cardset and cards spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,8 @@
    font-family: 'Raleway', sans-serif;
   }
 
-  .card{
+  .card {
+   max-width: 80%;
    padding: 5%;
    border-style: outset;
    border-width: 1px;
@@ -131,11 +132,12 @@
 
   .cardset {
     margin: auto;
-    max-width: 80%;
-    min-height: 400px;
-    margin: auto;
+    max-width: 40%;
+    min-height: 200px;
+    margin-left: 22%;
+    margin-right: 2%;
     position: relative;
-    top: 15%;
+    top: 5%;
     background-color: rgba(0,160,200,.3);
     box-shadow: 0px 2px 6px 1px grey;
     border-width: thin;
@@ -394,7 +396,7 @@
   //VERTICAL SIDEBAR STYLES
 
   .navbar-fixed-left {
-    width: 200px;
+    width: 20%;
     position: fixed;
     border-radius: 0;
     height: 100%;
